fix routeToPage function

--- a/learn_html/index.html
+++ b/learn_html/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <nav>
-        <div>Home</div>
-        <div>About</div>
+        <div onclick="routeToPage('home')">Home</div>
+        <div onclick="routeToPage('about')">About</div>
     </nav>
     <page id="home" class="hide-page">home</page>
     <page id="about" class="hide-page">about</page>
