add template for about page

--- a/learn_html/index.html
+++ b/learn_html/index.html
@@ -12,8 +12,44 @@
         <div onclick="routeToPage('home')">Home</div>
         <div onclick="routeToPage('about')">About</div>
     </nav>
-    <page id="home" class="hide-page">home</page>
-    <page id="about" class="hide-page">about</page>
-    <footer>&#169; 2020</footer>
+
+        <!-- home -->
+        <div id="home" class="hide-page">home</div>
+
+        <!-- about -->
+        <div id="about" class="hide-page">
+            <h1>Jason Rich Darmawan Onggo Putra</h1>
+            <h2>S1 Busienss Management</h2>
+
+            <div class="flex-container">
+                <div>
+                    <h3>Personal Details</h3>
+                    <article>abcd</article>
+                </div>
+                <div>
+                    <h3>Professional Summary</h3>
+                    <article>abcd</article>
+                </div>
+                <div>
+                    <h3>Skills/Interest</h3>
+                    <article>abcd</article>
+                </div>
+                <div>
+                    <h3>Education</h3>
+                    <article>abcd</article>
+                </div>
+                <div>
+                    <h3>Working Experience</h3>
+                    <article>abcd</article>
+                </div>
+                <div>
+                    <h3>Reach Me At</h3>
+                    <article>abcd</article>
+                </div>
+            <div>
+
+        </div>
+
+    <!-- <footer>&#169; 2020</footer> -->
 </body>
 </html>
