add content for about page

--- a/learn_html/index.html
+++ b/learn_html/index.html
@@ -24,27 +24,82 @@
             <div class="flex-container">
                 <div>
                     <h3>Personal Details</h3>
-                    <article>abcd</article>
+                    <article>I am a 20 years old student with experience in corporate bookkeeping and financial budgeting. I'm seeking an experience in IT management.</article>
                 </div>
                 <div>
                     <h3>Professional Summary</h3>
-                    <article>abcd</article>
+                    <article>
+                        <!-- AM -->
+                        <strong>Account Manager</strong><br>
+                        <i>Tempat Kerja Indonesia, Incorporated | 2020 - present</i>
+                        <ul>
+                            <li>Prepared the incorporation's legal document.</li>
+                            <li>Built relationship with the suppliers in China.</li>
+                            <li>Identified potential partner in Indonesia.</li>
+                        </ul>
+
+                        <br>
+
+                        <!-- BPI -->
+                        <strong>Business Process Improvement Intern</strong><br>
+                        <i>Step Point Indonesia, Incorporated | Jan 2018 - Mar 2018</i>
+                        <ul>
+                            <li>Examined the office politics situations in the HR and Operation dept.</li>
+                            <li>Examined the workload of the Admin dept.</li>
+                            <li>Prepared the findings report and recommended the preliminary action.</li>
+                        </ul>
+                    </article>
                 </div>
                 <div>
                     <h3>Skills/Interest</h3>
-                    <article>abcd</article>
+                    <article>
+                        <ul>
+                            <li>Reading fantasy books.</li>
+                            <li>Traveling and culinary.</li>
+                            <li>Know-how to deploy ERP software.</li>
+                        </ul>
+                    </article>
                 </div>
                 <div>
                     <h3>Education</h3>
-                    <article>abcd</article>
+                    <article>
+                        <strong>Prasetiya Mulya University</strong><br>
+                        <i>S1 Business Management | 2017 - present, currently in a gap year</i>
+                        <ul>
+                            <li>GPA: 3.77</li>
+                            <li>Scholarship winner for the 2018/2019, 2019/2020 academic year.</li>
+                        </ul>
+                    </article>
                 </div>
                 <div>
                     <h3>Working Experience</h3>
-                    <article>abcd</article>
+                    <article>
+                        <!-- SQC Staff -->
+                        <strong>Sales and Quality Control Staff</strong><br>
+                        <i>AIESEC in Prasetiya Mulya | Mar 2018 - Mar 2019</i>
+                        <ul>
+                            <li>Prepared the guest residence for the iGV participants.</li>
+                            <li>Prepared the iGV participants for the Global Village in Kota Tua.</li>
+                        </ul>
+
+                        <br>
+
+                        <!-- OCP -->
+                        <strong>Organizing Committee President</strong><br>
+                        <i>AIESEC in Prasetiya Mulya | Jun 2018 - Aug 2018</i>
+                        <ul>
+                            <li>Negotiated the terms for permissions to held Global Village.</li>
+                            <li>Worked with Polsek Metro Tamansari.</li>
+                            <li>The event was visited by Deputy Governor for Culture and Tourism.</li>
+                        </ul>
+                    </article>
                 </div>
                 <div>
                     <h3>Reach Me At</h3>
-                    <article>abcd</article>
+                    <article>
+                        Mobile: +62 811 8751 555<br>
+                        Email: jason.onggo@tempatkerja.com
+                    </article>
                 </div>
             <div>
 
