--- a/learn_html/index.html
+++ b/learn_html/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="assets/js/routePage.js" defer></script>
+    <script src="assets/js/maxHeight.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -14,7 +15,19 @@
     </nav>
 
         <!-- home -->
-        <div id="home" class="hide-page">home</div>
+        <div id="home" class="hide-page">
+            <div class="container">
+                <button class="maxHeight">
+                    <h3>Mengenai Web Ini</h3>
+                </button>
+                <div class="panel">
+                    <ul>
+                        <li>Terima kasih sudah mengunjungi web ini.</li>
+                        <li>Tujuan web ini adalah sebagai Curriculum Vitae dalam format HTML.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
         <!-- about -->
         <div id="about" class="hide-page">
