add content for home page

--- a/learn_html/index.html
+++ b/learn_html/index.html
@@ -17,13 +17,25 @@
         <!-- home -->
         <div id="home" class="hide-page">
             <div class="container">
+                <h3>Terima kasih sudah mengunjungi web ini.</h3>
+                <!-- Mengenai Web Ini -->
                 <button class="maxHeight">
                     <h3>Mengenai Web Ini</h3>
                 </button>
                 <div class="panel">
                     <ul>
-                        <li>Terima kasih sudah mengunjungi web ini.</li>
                         <li>Tujuan web ini adalah sebagai Curriculum Vitae dalam format HTML.</li>
+                    </ul>
+                </div>
+
+                <!-- Mengenai Jason -->
+                <button class="maxHeight">
+                    <h3>Mengenai Saya</h3>
+                </button>
+                <div class="panel">
+                    <ul>
+                        <li>Saya adalah mahasiswa jurusan Bisnis di Universitas Prasetiya Mulya.</li>
+                        <li>Saya saat ini sedang mengikuti bootcamp di G2 Academy</li>
                     </ul>
                 </div>
             </div>
