--- a/learn_html/index.html
+++ b/learn_html/index.html
@@ -16,13 +16,13 @@
 
         <!-- home -->
         <div id="home" class="hide-page">
-            <div class="container">
+            <div class="container"> <!-- parent -->
                 <h3>Terima kasih sudah mengunjungi web ini.</h3>
                 <!-- Mengenai Web Ini -->
-                <button class="maxHeight">
+                <button class="maxHeight"> <!-- sibling -->
                     <h3>Mengenai Web Ini</h3>
                 </button>
-                <div class="panel">
+                <div class="panel"> <!-- sibling -->
                     <ul>
                         <li>Tujuan web ini adalah sebagai Curriculum Vitae dalam format HTML.</li>
                     </ul>
@@ -44,7 +44,7 @@
         <!-- about -->
         <div id="about" class="hide-page">
             <h1>Jason Rich Darmawan Onggo Putra</h1>
-            <h2>S1 Busienss Management</h2>
+            <h2>S1 Business Management</h2>
 
             <div class="flex-container">
                 <div>
