rename css class

--- a/learn_html/index.html
+++ b/learn_html/index.html
@@ -17,7 +17,7 @@
 
         <!-- home -->
         <div id="home" class="hide-page">
-            <div class="containerPage"> <!-- parent -->
+            <div class="pageContainer"> <!-- parent -->
                 <h3>Terima kasih sudah mengunjungi web ini.</h3>
                 <!-- Mengenai Web Ini -->
                 <button class="maxHeight"> <!-- sibling -->
@@ -44,7 +44,7 @@
 
         <!-- about -->
         <div id="about" class="hide-page">
-            <div class="containerPage">
+            <div class="pageContainer">
                 <h1>Jason Rich Darmawan Onggo Putra</h1>
                 <h2>S1 Business Management</h2>
     
