adjust css after bootstrap implementation

--- a/learn_html/index.html
+++ b/learn_html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="assets/js/routePage.js" defer></script>
     <script src="assets/js/maxHeight.js" defer></script>
@@ -18,7 +18,7 @@
         <!-- home -->
         <div id="home" class="hide-page">
             <div class="pageContainer"> <!-- parent -->
-                <h3>Terima kasih sudah mengunjungi web ini.</h3>
+                <!-- <h3>Terima kasih sudah mengunjungi web ini.</h3> -->
                 <!-- Mengenai Web Ini -->
                 <button class="maxHeight"> <!-- sibling -->
                     <h3>Mengenai Web Ini</h3>
@@ -29,15 +29,12 @@
                     </ul>
                 </div>
 
-                <!-- Mengenai Jason -->
+                <!-- Portfolio: Calculator -->
                 <button class="maxHeight">
-                    <h3>Mengenai Saya</h3>
+                    <h3>Portofolio: Calculator.js</h3>
                 </button>
                 <div class="panel">
-                    <ul>
-                        <li>Saya adalah mahasiswa jurusan Bisnis di Universitas Prasetiya Mulya.</li>
-                        <li>Saya saat ini sedang mengikuti bootcamp di G2 Academy</li>
-                    </ul>
+                    <!-- TODO: implement jQuery -->
                 </div>
             </div>
         </div>
@@ -132,6 +129,5 @@
             </div>
         </div>
 
-        <footer>hi</footer>
 </body>
 </html>
