add template for motivation letter and it core values

--- a/learn_html/index.html
+++ b/learn_html/index.html
@@ -14,6 +14,8 @@
         <div onclick="routeToPage('home')">Home</div>
         <div onclick="routeToPage('about')">About</div>
         <div onclick="routeToPage('contact')">Contact</div>
+        <div onclick="routeToPage('motivation-letter')">Motivation Letter</div>
+        <div onclick="routeToPage('it-core-values')">IT Core Values</div>
     </nav>
 
         <!-- home -->
@@ -132,6 +134,20 @@
         <div id="contact" class="hide-page">
             <div class="pageContainer">
                 <!-- TODO: Contact Form to WhatsApp -->
+            </div>
+        </div>
+
+        <!-- motivation-letter -->
+        <div id="motivation-letter" class="hide-page">
+            <div class="pageContainer">
+                <!-- TODO: Motivation Letter -->
+            </div>
+        </div>
+
+        <!-- it-core-values -->
+        <div id="it-core-values" class="hide-page">
+            <div class="pageContainer">
+                <!-- TODO: IT Core Values -->
             </div>
         </div>
 
