add support for responsive web design

--- a/learn_html/index.html
+++ b/learn_html/index.html
@@ -37,7 +37,7 @@
                     <h3>Portofolio: Calculator.js</h3>
                 </button>
                 <div class="panel">
-                    <!-- TODO: implement jQuery -->
+                    <iframe src="https://kidfrom.github.io/calculator_js/index.html" style="width:100vw; height: 50vh;"></iframe>
                 </div>
             </div>
         </div>
