--- a/learn_html/index.html
+++ b/learn_html/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="assets/js/routePage.js" defer></script>
     <script src="assets/js/maxHeight.js" defer></script>
-    <title>Document</title>
+    <title>Curriculum Vitae</title>
 </head>
 <body>
     <nav>
@@ -21,7 +21,6 @@
         <!-- home -->
         <div id="home" class="hide-page">
             <div class="pageContainer"> <!-- parent -->
-                <!-- <h3>Terima kasih sudah mengunjungi web ini.</h3> -->
                 <!-- Mengenai Web Ini -->
                 <button class="maxHeight"> <!-- sibling -->
                     <h3>Mengenai Web Ini</h3>
@@ -32,12 +31,14 @@
                     </ul>
                 </div>
 
+                <br>
+
                 <!-- Portfolio: Calculator -->
                 <button class="maxHeight">
                     <h3>Portofolio: Calculator.js</h3>
                 </button>
                 <div class="panel">
-                    <iframe src="https://kidfrom.github.io/calculator_js/index.html" style="width:100vw; height: 50vh;"></iframe>
+                    <iframe src="https://kidfrom.github.io/calculator_js/index.html"></iframe>
                 </div>
             </div>
         </div>
