--- a/learn_html/index.html
+++ b/learn_html/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="assets/js/routePage.js" defer></script>
     <script src="assets/js/maxHeight.js" defer></script>
+    <script src="assets/js/sendToWhatsApp.js" defer></script>
     <title>Curriculum Vitae</title>
 </head>
 <body>
@@ -23,11 +24,11 @@
             <div class="pageContainer"> <!-- parent -->
                 <!-- Mengenai Web Ini -->
                 <button class="maxHeight"> <!-- sibling -->
-                    <h3>Mengenai Web Ini</h3>
+                    <h3>About this website</h3>
                 </button>
                 <div class="panel"> <!-- sibling -->
                     <ul>
-                        <li>Tujuan web ini adalah sebagai Curriculum Vitae dalam format HTML.</li>
+                        <li>The purpose of this website is to present Jason's curriculum vitae in HTML format.</li>
                     </ul>
                 </div>
 
@@ -35,7 +36,7 @@
 
                 <!-- Portfolio: Calculator -->
                 <button class="maxHeight">
-                    <h3>Portofolio: Calculator.js</h3>
+                    <h3>Portfolio: Calculator.js</h3>
                 </button>
                 <div class="panel">
                     <iframe src="https://kidfrom.github.io/calculator_js/index.html"></iframe>
@@ -133,8 +134,21 @@
 
         <!-- contact -->
         <div id="contact" class="hide-page">
-            <div class="pageContainer">
+            <br>
+            <div class="container">
                 <!-- TODO: Contact Form to WhatsApp -->
+                <form>
+                    <div class="form-group">
+                      <label for="inputFirstName">First Name</label>
+                      <input type="text" class="form-control" id="inputFirstName" placeholder="Your name">
+                    </div>
+                    <div class="form-group">
+                      <label for="inputMessage">Message</label>
+                      <textarea class="form-control" id="inputMessage" placeholder="Message">I have the following questions: </textarea>
+                    </div>
+                    <button class="btn btn-primary" style="background-color:#25D366; border-color: #25D366;" onclick="sendToWhatsApp()">Send to WhatsApp</button>
+                </form>
+
             </div>
         </div>
 
