add content for motivation letter page with bootstrap

--- a/learn_html/index.html
+++ b/learn_html/index.html
@@ -22,7 +22,7 @@
         <!-- home -->
         <div id="home" class="hide-page">
             <div class="pageContainer"> <!-- parent -->
-                <!-- Mengenai Web Ini -->
+                <!-- about this website  -->
                 <button class="maxHeight"> <!-- sibling -->
                     <h3>About this website</h3>
                 </button>
@@ -34,7 +34,7 @@
 
                 <br>
 
-                <!-- Portfolio: Calculator -->
+                <!-- Portfolio: Calculator.js -->
                 <button class="maxHeight">
                     <h3>Portfolio: Calculator.js</h3>
                 </button>
@@ -136,7 +136,6 @@
         <div id="contact" class="hide-page">
             <br>
             <div class="container">
-                <!-- TODO: Contact Form to WhatsApp -->
                 <form>
                     <div class="form-group">
                       <label for="inputFirstName">First Name</label>
@@ -154,14 +153,26 @@
 
         <!-- motivation-letter -->
         <div id="motivation-letter" class="hide-page">
-            <div class="pageContainer">
-                <!-- TODO: Motivation Letter -->
+            <br>
+            <div class="container">
+                <blockquote class="blockquote text-justify">
+                    <p>At the age of 20, this year, marked my appreciation for hard work and the value of continuous improvement. I realized that I should not quickly satisfied and I should always improve my skills.</p>
+                    <p>I witnessed the impact of technology in China. Technology contributes to almost every aspect of poverty allevation program in China. From the economic policy to education policy.</p>
+                    <p class="mb-0">Through technology, I believe I can maximize my impact while also creating wealth.</p>
+                    <footer class="blockquote-footer">Jason <cite title="Source Title">from Indonesia</cite></footer>
+                    
+                    <br>
+
+                    <p class="mb-0">Nothing is free. Nothing is easy. If you want to be successful, you have to pay the price.</p>
+                    <footer class="blockquote-footer">Jack Ma <cite title="Source Title">, Alibaba Group</cite></footer>
+                </blockquote>
             </div>
         </div>
 
         <!-- it-core-values -->
         <div id="it-core-values" class="hide-page">
-            <div class="pageContainer">
+            <br>
+            <div class="container">
                 <!-- TODO: IT Core Values -->
             </div>
         </div>
