add content for the IT core values page

--- a/learn_html/index.html
+++ b/learn_html/index.html
@@ -173,7 +173,28 @@
         <div id="it-core-values" class="hide-page">
             <br>
             <div class="container">
-                <!-- TODO: IT Core Values -->
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="card">
+                            <div class="card-body">
+                              <h5 class="card-title">Minimum Viable Product</h5>
+                              <h6 class="card-subtitle mb-2 text-muted">Focus on testing the MVP, everything else can wait.</h6>
+                              <p class="card-text">In my early days of coding. I tried to create an algorithm to generate a Puzzle in 30ms. It took 4 days to create and test the idea. But after the idea works on paper, it only took 1 hour to refactor the code.</p>
+                              <a href="https://github.com/kidfrom/sudoku_js/blob/master/dump/white_paper.MD" class="card-link">Day 103th of coding</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card">
+                            <div class="card-body">
+                              <h5 class="card-title">Documentation</h5>
+                              <h6 class="card-subtitle mb-2 text-muted">Learn from the mistakes.</h6>
+                              <p class="card-text">In my early days of coding. I wanted to have my own @jason.com email without paying premium. I built my own mail server, within a month, I relied on notes to maintain the mail server.</p>
+                              <a href="https://github.com/kidfrom/docs/blob/master/EMAIL.md" class="card-link">Day 24th of coding</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
