update the context of IT core values

--- a/learn_html/index.html
+++ b/learn_html/index.html
@@ -196,7 +196,7 @@
                             <div class="card-body">
                               <h5 class="card-title">Documentation</h5>
                               <h6 class="card-subtitle mb-2 text-muted">Learn from the mistakes.</h6>
-                              <p class="card-text">In my early days of coding. I wanted to have my own @jason.com email without paying premium. I built the mail server, within a month, I must relied on notes to maintain the mail server.</p>
+                              <p class="card-text">In my early days of coding. I wanted to have my own @jason.com email without paying premium. I built the mail server. After a month, I must relied on notes to maintain the mail server.</p>
                               <a href="https://github.com/kidfrom/docs/blob/master/EMAIL.md" class="card-link">Day 24th of coding</a>
                             </div>
                         </div>
