update image for LinkedIn Featured

--- a/learn_html/index.html
+++ b/learn_html/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- for LinkedIn Featured -->
-    <meta property="og:image" content="assets/img/0.jpg"/>
+    <meta property="og:image" content="https://media-exp1.licdn.com/dms/image/C5103AQEHNSw5h-XKyQ/profile-displayphoto-shrink_100_100/0?e=1602720000&v=beta&t=_61iaNE3hUdPBnAq29B8bjvQERfLHopQZCT93-ovR0c"/>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -14,7 +14,7 @@
     <script src="assets/js/maxHeight.js" defer></script>
     <script src="assets/js/sendToWhatsApp.js" defer></script>
     <script src="assets/js/hamburgerMenu.js" defer></script>
-    
+
     <title>Curriculum Vitae</title>
 </head>
 <body>
