add national id number, TODO: viewable only by admin

--- a/learn_offline-storage/index.html
+++ b/learn_offline-storage/index.html
@@ -28,7 +28,11 @@
                     <label for="inputFirstName">First Name</label>
                     <input type="text" class="form-control" id="inputFirstName" placeholder="Your name">
                 </div>
-                <div class="btn btn-primary" onclick="submit()">Register</div>
+                <div class="form-group">
+                    <label for="inputIDNumber">National Identification Number</label>
+                    <input type="text" class="form-control" id="inputIDNumber" placeholder="ID Card Number">
+                </div>
+                <div class="btn btn-primary" onclick="submit()">Submit</div>
             </form>
         </div>
     </div>
