add local storage support

--- a/learn_offline-storage/index.html
+++ b/learn_offline-storage/index.html
@@ -15,7 +15,7 @@
     <nav>
         <!-- hidden by default in mobile -->
         <div onclick="routeToPage('submit')">Submit</div>
-        <div onclick="routeToPage('view')">View</div>
+        <div onclick="routeToPage('view'); view();">View</div>
     </nav>
 
     <br>
