--- a/learn_offline-storage/index.html
+++ b/learn_offline-storage/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <script src="assets/js/offlineStorage.js" defer></script>
+    <script src="assets/js/localStorage.js" defer></script>
     <script src="assets/js/routeToPage.js" defer></script>
 </head>
 <body>
