--- a/learn_offline-storage/index.html
+++ b/learn_offline-storage/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="assets/js/localStorage.js" defer></script>
     <script src="assets/js/routeToPage.js" defer></script>
+    <script src="assets/js/formValidator.js" defer></script>
 </head>
 <body>
 
@@ -23,7 +24,7 @@
     <!-- submit -->
     <div id="submit" class="hide-page">
         <div class="container">
-            <form>
+            <!-- <form>
                 <div class="form-group">
                     <label for="inputFirstName">First Name</label>
                     <input type="text" class="form-control" id="inputFirstName" placeholder="Your name">
@@ -33,6 +34,47 @@
                     <input type="text" class="form-control" id="inputIDNumber" placeholder="ID Card Number">
                 </div>
                 <div class="btn btn-primary" onclick="submit()">Submit</div>
+            </form> -->
+            <form class="needs-validation" novalidate>
+                <!-- First name -->
+                <div class="form-group">
+                    <label for="inputFirstName">First name</label>
+                    <input type="text" class="form-control" id="inputFirstName" placeholder="First name" required>
+                    <div class="invalid-feedback">Please provide a valid name.</div>
+                </div>
+                <!-- ID Number -->
+                <div class="form-group">
+                    <label for="inputIDNumber">National Identification Number</label>
+                    <input type="text" class="form-control" id="inputIDNumber" placeholder="National Identification Number" required>
+                    <div class="invalid-feedback">Please provide a valid ID Number.</div>
+                </div>
+
+                <!-- PIC -->
+                <div class="form-group">
+                    <label for="inputPIC">Person-in-Charge</label>
+                    <select class="custom-select" id="inputPIC" required>
+                        <option value="">Open this select menu</option>
+                        <option value="Jack Ma">Jack Ma</option>
+                        <option value="Jeff Bezos">Jeff Bezos</option>
+                        <option value="Elon Musk">Elon Musk</option>
+                    </select>
+                    <div class="invalid-feedback">Please select the current Person-in-Charge.</div>
+                </div>
+
+                <!-- Intention -->
+                <div class="form-group">
+                    <label for="inputPIC">Intention</label>
+                    <select class="custom-select" id="inputPIC" required>
+                        <option value="">Open this select menu</option>
+                        <option value="Attendance">Attendance</option>
+                        <option value="Counseling">Counseling</option>
+                        <option value="Place Visits">Place Visits</option>
+                    </select>
+                    <div class="invalid-feedback">Please select your intention.</div>
+                </div>
+
+                <!-- submit -->
+                <button class="btn btn-primary" type="submit">Submit form</button>
             </form>
         </div>
     </div>
