--- a/learn_offline-storage/index.html
+++ b/learn_offline-storage/index.html
@@ -51,20 +51,20 @@
 
                 <!-- PIC -->
                 <div class="form-group">
-                    <label for="inputPIC">Person-in-Charge</label>
-                    <select class="custom-select" id="inputPIC" required>
+                    <label for="inputIDPIC">Person-in-Charge</label>
+                    <select class="custom-select" id="inputIDPIC" required>
                         <option value="">Open this select menu</option>
-                        <option value="Jack Ma">Jack Ma</option>
-                        <option value="Jeff Bezos">Jeff Bezos</option>
-                        <option value="Elon Musk">Elon Musk</option>
+                        <option value="1">Jack Ma</option>
+                        <option value="2">Jeff Bezos</option>
+                        <option value="3">Elon Musk</option>
                     </select>
                     <div class="invalid-feedback">Please select the current Person-in-Charge.</div>
                 </div>
 
                 <!-- Intention -->
                 <div class="form-group">
-                    <label for="inputPIC">Intention</label>
-                    <select class="custom-select" id="inputPIC" required>
+                    <label for="inputIntention">Intention</label>
+                    <select class="custom-select" id="inputIntention" required>
                         <option value="">Open this select menu</option>
                         <option value="Attendance">Attendance</option>
                         <option value="Counseling">Counseling</option>
