update the localStorage.js, now use Objects inside Array

--- a/learn_offline-storage/index.html
+++ b/learn_offline-storage/index.html
@@ -83,7 +83,19 @@
     <div id="view" class="hide-page">
         <div class="container">
             <h1>Guest List</h1>
-            <ul class="list-group" id="viewList"></ul>
+            <!-- <ul class="list-group" id="viewList"></ul> -->
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">ID Card Number</th>
+                    <th scope="col">First Name</th>
+                    <th scope="col">Person-in-Charge</th>
+                    <th scope="col">Intention</th>
+                  </tr>
+                </thead>
+                <tbody id="viewList"></tbody>
+            </table>
         </div>
     </div>
 </body>
