--- a/learn_offline-storage/index.html
+++ b/learn_offline-storage/index.html
@@ -14,7 +14,6 @@
 
     <!-- nav -->
     <nav>
-        <!-- hidden by default in mobile -->
         <div onclick="routeToPage('submit')">Submit</div>
         <div onclick="routeToPage('view'); view();">View</div>
     </nav>
@@ -24,17 +23,7 @@
     <!-- submit -->
     <div id="submit" class="hide-page">
         <div class="container">
-            <!-- <form>
-                <div class="form-group">
-                    <label for="inputFirstName">First Name</label>
-                    <input type="text" class="form-control" id="inputFirstName" placeholder="Your name">
-                </div>
-                <div class="form-group">
-                    <label for="inputIDNumber">National Identification Number</label>
-                    <input type="text" class="form-control" id="inputIDNumber" placeholder="ID Card Number">
-                </div>
-                <div class="btn btn-primary" onclick="submit()">Submit</div>
-            </form> -->
+            <h1>Visits</h1><br>
             <form class="needs-validation" novalidate>
                 <!-- First name -->
                 <div class="form-group">
@@ -82,8 +71,7 @@
     <!-- view -->
     <div id="view" class="hide-page">
         <div class="container">
-            <h1>Guest List</h1>
-            <!-- <ul class="list-group" id="viewList"></ul> -->
+            <h1>Guest List</h1><br>
             <table class="table">
                 <thead>
                   <tr>
