--- a/learn_offline-storage/index.html
+++ b/learn_offline-storage/index.html
@@ -9,13 +9,33 @@
     <script src="assets/js/localStorage.js" defer></script>
     <script src="assets/js/routeToPage.js" defer></script>
     <script src="assets/js/formValidator.js" defer></script>
+    <script src="assets/js/hamburgerMenu.js" defer></script>
 </head>
 <body>
 
     <!-- nav -->
-    <nav>
-        <div onclick="routeToPage('submit')">Submit</div>
-        <div onclick="routeToPage('view'); view();">View</div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand">Guest List</a>
+        <button class="navbar-toggler" type="button" onclick="collapse()">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" onclick="routeToPage('submit')">Submit <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" onclick="routeToPage('view'); view();">Visit</a>
+            </li>
+          </ul>
+          
+          <!-- TODO: add search function -->
+          <!-- <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form> -->
+        </div>
     </nav>
 
     <br>
@@ -61,6 +81,8 @@
                     </select>
                     <div class="invalid-feedback">Please select your intention.</div>
                 </div>
+
+                <br>
 
                 <!-- submit -->
                 <button class="btn btn-primary" type="submit">Submit form</button>
