add support for table responsive

--- a/learn_offline-storage/index.html
+++ b/learn_offline-storage/index.html
@@ -94,7 +94,8 @@
     <div id="view" class="hide-page">
         <div class="container">
             <h1>Guest List</h1><br>
-            <table class="table">
+            <div class="table-responsive">
+              <table class="table">
                 <thead>
                   <tr>
                     <th scope="col">#</th>
@@ -105,7 +106,8 @@
                   </tr>
                 </thead>
                 <tbody id="viewList"></tbody>
-            </table>
+              </table>
+            </div>
         </div>
     </div>
 </body>
