add portfolio using iframe

--- a/learn_html/index.html
+++ b/learn_html/index.html
@@ -48,12 +48,22 @@
 
             <br>
 
-            <!-- Portfolio: Calculator.js -->
+            <!-- Portfolio: Calculator w/ JS -->
             <button class="maxHeight">
-                <h3>Portfolio: Calculator.js</h3>
+                <h3>Portfolio: Calculator w/ JS</h3>
             </button>
             <div class="panel">
                 <iframe src="https://kidfrom.github.io/calculator_js/index.html"></iframe>
+            </div>
+
+            <br>
+
+            <!-- Portfolio: Guest List w/ JS and Local Storage -->
+            <button class="maxHeight">
+                <h3>Portfolio: Guest List w/ JS and Local Storage</h3>
+            </button>
+            <div class="panel">
+                <iframe src="https://raw.githack.com/kidfrom/bc_g2_learn_reactjs/offline-storage/learn_offline-storage/index.html"></iframe>
             </div>
         </div>
     </div>
