--- a/learn_offline-storage/index.html
+++ b/learn_offline-storage/index.html
@@ -60,12 +60,12 @@
 
                 <!-- PIC -->
                 <div class="form-group">
-                    <label for="inputIDPIC">Person-in-Charge</label>
-                    <select class="custom-select" id="inputIDPIC" required>
+                    <label for="inputPICName">Person-in-Charge</label>
+                    <select class="custom-select" id="inputPICName" required>
                         <option value="">Open this select menu</option>
-                        <option value="1">Jack Ma</option>
-                        <option value="2">Jeff Bezos</option>
-                        <option value="3">Elon Musk</option>
+                        <option value="Jack Ma">Jack Ma</option>
+                        <option value="Jeff Bezos">Jeff Bezos</option>
+                        <option value="Elon Musk">Elon Musk</option>
                     </select>
                     <div class="invalid-feedback">Please select the current Person-in-Charge.</div>
                 </div>
