change idPIC to picName to make the app more dynamic

--- a/learn_offline-storage/index.html
+++ b/learn_offline-storage/index.html
@@ -60,25 +60,27 @@
 
                 <!-- PIC -->
                 <div class="form-group">
-                    <label for="inputIDPIC">Person-in-Charge</label>
-                    <select class="custom-select" id="inputIDPIC" required>
+                    <label for="inputPICName">Person-in-Charge</label>
+                    <!-- <select class="custom-select" id="inputPICName" required>
                         <option value="">Open this select menu</option>
-                        <option value="1">Jack Ma</option>
-                        <option value="2">Jeff Bezos</option>
-                        <option value="3">Elon Musk</option>
-                    </select>
+                        <option value="Jack Ma">Jack Ma</option>
+                        <option value="Jeff Bezos">Jeff Bezos</option>
+                        <option value="Elon Musk">Elon Musk</option>
+                    </select> -->
+                    <input type="text" class="form-control" id="inputPICName" placeholder="Person-in-Charge" required>
                     <div class="invalid-feedback">Please select the current Person-in-Charge.</div>
                 </div>
 
                 <!-- Intention -->
                 <div class="form-group">
                     <label for="inputIntention">Intention</label>
-                    <select class="custom-select" id="inputIntention" required>
+                    <!-- <select class="custom-select" id="inputIntention" required>
                         <option value="">Open this select menu</option>
                         <option value="Attendance">Attendance</option>
                         <option value="Counseling">Counseling</option>
                         <option value="Place Visits">Place Visits</option>
-                    </select>
+                    </select> -->
+                    <input type="text" class="form-control" id="inputIntention" placeholder="Intention" required>
                     <div class="invalid-feedback">Please select your intention.</div>
                 </div>
 
