--- a/learn_html/index.html
+++ b/learn_html/index.html
@@ -65,6 +65,20 @@
             <div class="panel">
                 <iframe src="https://raw.githack.com/kidfrom/bc_g2_learn_reactjs/offline-storage/learn_offline-storage/index.html"></iframe>
             </div>
+
+            <br>
+
+            <!-- Portfolio: HRS with ReactJS and Local Storage -->
+            <button class="maxHeight">
+                <h3>Portfolio: HRS with ReactJS and Local Storage</h3>
+            </button>
+            <div class="panel">
+                <ul>
+                    <li>
+                        <a href="https://github.com/kidfrom/bc_g2_learn_reactjs/tree/hrs-mockup/learn_reactjs">Source Code</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 
