--- a/learn_html/index.html
+++ b/learn_html/index.html
@@ -70,12 +70,18 @@
 
             <!-- Portfolio: HRS with ReactJS and Local Storage -->
             <button class="maxHeight">
-                <h3>Portfolio: HRS with ReactJS and Local Storage</h3>
+                <h3>Portfolio: Express, ReactJS, Firebase</h3>
             </button>
             <div class="panel">
                 <ul>
                     <li>
-                        <a href="https://github.com/kidfrom/bc_g2_learn_reactjs/tree/hrs-mockup/learn_reactjs">Source Code</a>
+                        Day 112: HRS Mockup with ReactJS and Local Storage <a href="https://github.com/kidfrom/bc_g2_learn_reactjs/tree/hrs-mockup/learn_reactjs">Source Code</a>
+                    </li>
+                    <li>
+                        Day 117: Client-side JWT Authentication with Express <a href="https://github.com/kidfrom/bc_g2_learn_reactjs/tree/jwt">Source Code</a>
+                    </li>
+                    <li>
+                        Day 118: Server-side Authentication with ReactJS and Firebase Auth <a href="https://github.com/kidfrom/bc_g2_learn_reactjs/tree/reactjs-firebase/reactjs_firebase">Source Code</a>
                     </li>
                 </ul>
             </div>
