--- a/learn_html/index.html
+++ b/learn_html/index.html
@@ -81,7 +81,7 @@
                         Day 117: Client-side JWT Authentication with Express <a href="https://github.com/kidfrom/bc_g2_learn_reactjs/tree/jwt">Source Code</a>
                     </li>
                     <li>
-                        Day 118: Server-side Authentication with ReactJS and Firebase Auth <a href="https://github.com/kidfrom/bc_g2_learn_reactjs/tree/reactjs-firebase/reactjs_firebase">Source Code</a>
+                        Day 118: Parking Management System with ReactJS, Firebase & Firestore <a href="https://github.com/kidfrom/bc_g2_learn_reactjs/tree/reactjs-firebase/reactjs_firebase">Source Code</a>
                     </li>
                 </ul>
             </div>
