--- a/learn_html/index.html
+++ b/learn_html/index.html
@@ -38,7 +38,7 @@
         <div class="pageContainer"> <!-- parent -->
             <!-- about this website  -->
             <button class="maxHeight"> <!-- sibling -->
-                <h3>About this website</h3>
+                <p>About this website</p>
             </button>
             <div class="panel"> <!-- sibling -->
                 <ul>
@@ -50,7 +50,7 @@
 
             <!-- Portfolio: Calculator w/ JS -->
             <button class="maxHeight">
-                <h3>Portfolio: Calculator w/ JS</h3>
+                <p><b>Day 86:</b> Calculator w/ JS (Live Preview)</p>
             </button>
             <div class="panel">
                 <iframe src="https://kidfrom.github.io/calculator_js/index.html"></iframe>
@@ -60,7 +60,7 @@
 
             <!-- Portfolio: Guest List w/ JS and Local Storage -->
             <button class="maxHeight">
-                <h3>Portfolio: Guest List w/ JS and Local Storage</h3>
+                <p><b>Day 108:</b> Guest List w/ JS and Local Storage (Live Preview)</p>
             </button>
             <div class="panel">
                 <iframe src="https://raw.githack.com/kidfrom/bc_g2_learn_reactjs/offline-storage/learn_offline-storage/index.html"></iframe>
@@ -70,18 +70,18 @@
 
             <!-- Portfolio: HRS with ReactJS and Local Storage -->
             <button class="maxHeight">
-                <h3>Portfolio: Express, ReactJS, Firebase</h3>
+                <p><b>Day 112:</b> Express, Firebase, ReactJS <b>(Source Code)</b></p>
             </button>
             <div class="panel">
                 <ul>
                     <li>
-                        Day 112: HRS Mockup with ReactJS and Local Storage <a href="https://github.com/kidfrom/bc_g2_learn_reactjs/tree/hrs-mockup/learn_reactjs">Source Code</a>
+                        <b>Day 112:</b> HRS Mockup with ReactJS and Local Storage <a href="https://github.com/kidfrom/bc_g2_learn_reactjs/tree/hrs-mockup/learn_reactjs">Source Code</a>
                     </li>
                     <li>
-                        Day 117: Client-side JWT Authentication with Express <a href="https://github.com/kidfrom/bc_g2_learn_reactjs/tree/jwt">Source Code</a>
+                        <b>Day 117:</b> Client-side JWT Authentication with Express <a href="https://github.com/kidfrom/bc_g2_learn_reactjs/tree/jwt">Source Code</a>
                     </li>
                     <li>
-                        Day 118: Parking Management System with ReactJS, Firebase & Firestore <a href="https://github.com/kidfrom/bc_g2_learn_reactjs/tree/reactjs-firebase/reactjs_firebase">Source Code</a>
+                        <b>Day 118:</b> Parking Management System with ReactJS, Firebase & Firestore <a href="https://github.com/kidfrom/bc_g2_learn_reactjs/tree/reactjs-firebase/reactjs_firebase">Source Code</a>
                     </li>
                 </ul>
             </div>
